tests/negative/Internal/UnsolvedMeta.juvix
module UnsolvedMeta;

type Proxy (A : Type) := x : Proxy A;
open Proxy;

t : Proxy _ := x;
